--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
-body { margin:0; padding:0; }
-#map { position:absolute; top:0; bottom:0; width:100%; }
+body {
+	margin: 0;
+	padding:0;
+}
+
+#map {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+}
 
 #sidebar {
 	width: 30%;
@@ -36,17 +45,17 @@ body { margin:0; padding:0; }
 	}
 	
 	.avatar {
+		display: table-cell; 
 		float: left;
 		padding: 5px;
-		display: table-cell; 
 		vertical-align: middle;
 	}
 	
 		.avatar img {
 			margin: 10px;
+			border-radius: 30px;
 			width: 60px;
 			height: 60px;
-			border-radius: 30px;
 		}
 	
 	.userinfo {
@@ -59,13 +68,11 @@ body { margin:0; padding:0; }
 			padding:  0;
 		}
  
-
-
 .marker {
 display: block;
 border: none;
-height: 50px;
-width: 50px;
+height: 60px;
+width: 60px;
 border-radius: 50%;
 cursor: pointer;
 padding: 0;
